review stop at 146/210 page

--- a/little_languages.tex
+++ b/little_languages.tex
@@ -769,7 +769,7 @@ Forth 和 Postscript) 和口袋计算器都把它作为基本表示法来使用.
 到目前为止, 本章所介绍的语言都拥有易于分析的语法规则. 然而, 大多数高级
 语言拥有大量不同优先级的运算符, 嵌套结构 (比如括号与 if-then-else 语句),
 以及其他复杂的构造, 所有的这些都要求更强大的解析技术, 而不仅仅是字段
-分割与正则表达式匹配. 使用 awk 处理高级语言是可能的, 只要开发一个完全
+分割与正则表达式匹配. 使用 awk 处理高级语言是可能的, 只要有一个完全
 成熟的解析程序即可, 而解析程序可以用任何一种语言来写\footnote{原文为
     It is possible to process such languages in awk by
 writing a full-fledged parser, as one would in any language}.
@@ -856,8 +856,8 @@ writing a full-fledged parser, as one would in any language}.
 \end{exercise}
 
 \begin{exercise}
-    为中缀计算器添加指数运算, 内建函数和变量. 与逆波兰式计算器相比, 在
-    实现上会有什么不同之处?
+    为中缀计算器添加指数运算, 内建函数和变量. 与逆波兰式计算器的实现
+    作比较.
 \end{exercise}
 
 \begin{exercise}
