--- a/awk.tex
+++ b/awk.tex
@@ -18,6 +18,7 @@
 \include{reports_and_databases}
 \include{processing_words}
 \include{little_languages}
+\include{experiments_with_algorithms}
 
 \backmatter
 
