review stop at page 153/210 page

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -5,14 +5,14 @@
 
 一般而言, 理解事物如何工作的最好方式就是自己动手做一些小实验, 算法学习
 就是一个典型的例子: 编写实际代码有助于弄清楚那些容易被伪码掩盖的问题.
-不仅如此, 最终得到的程序是运行的, 通过观察运行结果, 就可以知道算法的
+不仅如此, 最终得到的程序是可运行的, 通过观察运行结果, 就可以知道算法的
 的正确性, 而这是伪码所无法办到的.
 
 Awk 很适合做这种测试工作. 如果某个程序使用 awk 编写, 那我们就可以把精力
 集中在算法上, 而不是语言本身. 如果某个算法最终要应用到某个大型程序中,
 那么先让算法能够单独地运行起来可能会更有效率. 当需要为某个算法进行调试,
 测试与性能评价时, 通常需要构造一些脚手架程序, 在这一方面, awk 是一款
-优秀的脚手架构造工具, 它并不管算法本身是用什么语言实现的.
+优秀的脚手架构造工具, 它并不关心算法本身是用什么语言实现的.
 
 这一章讨论算法实验. 前半章描述三种排序算法, 这三种算法常常是算法课首
 先要介绍的内容, 我们将使用 awk 程序对这些算法进行测试, 性能度量和
