translate part of page 156/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -168,3 +168,12 @@ tests, exercising the sort function as suggested above.\footnote{TODO}
             A[i] = 1
     }
 \end{awkcode}
+
+第二种方法相对来说没那么方便, 但很适合用 awk 来处理. 基本思想是构建一个
+构架程序, 利用该框架可以很容易以交互性的方式来完成测试. 交互式方案是
+批处理模式的一个很好的补充, 特别是当待测试的算法没有排序那么容易理解
+时. 交互式处理模式在调试程序时也很方便.
+
+特别地, 我们将要设计的程序, 在效果上等价于一个专门用于构造测试数据与操作
+的微型语言, 因为语言并不需要做太多的工作, 也不必处理大量用户的情况,
+所以
