translate part of page 160/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -330,3 +330,19 @@ and counts for each size.}  输出数据被输送给绘图程序 \texttt{grap}, 
     这个假设是否合理? 写一个处理大量数据的程序, 来验证你的想法.
 \end{exercise}
 \marginpar{160}
+
+\subsection{快速排序}
+\label{subsec:quicksort}
+
+\cterm{基本概念}. 快速排序是最高效的通用排序算法之一, 由 C. A. R. Hoare
+在六十年代早期提出. 为了对一个元素序列进行排序, 快速排序算法把序列划分成
+两个子序列, 然后再递归地对子序列进行排序. 在划分阶段, 算法从序列中选取
+一个元素作为划分点, 把剩下的元素分成两组: 小于划分元素的分在一个组中, 
+而大于或等于划分元素的分在另一个组中, 然后再对这两组递归调用快速排序.
+如果一个序列所含的元素个数小于2, 则可认为它已经是有序的了, 于是算法
+什么也不做就返回.
+
+\cterm{实现}. 实现快速排序有多种方式, 这些方式的不同点就在于划分阶段.
+我们所选择的实现方式比较容易理解, 虽然不是最快的. 因为算法是递归的,
+所以我们会在划分操作作用在子数组 \texttt{A[left]}, \texttt{A[left+1]},
+..., \texttt{A[right]} 上时, 对划分进行描述.
