complete part of page 205/210

--- a/index.tex
+++ b/index.tex
@@ -5,5 +5,93 @@
 索引中的页码指的是英文原版的页码, 与本书页边标注的页码一致.
 
 \begin{multicols}{2}
+\verb'&&' 逻辑与运算符 10, 31, 37, 158
 
+\verb'%=' 38
+
+\verb'*=' 38 
+
+\verb'+=' 38
+
+\verb'-=' 38
+
+\verb'/=' 38
+
+\verb'^=' 38 
+
+\verb'=' 38, 44
+
+\verb'\' 28, 30, 41, 43
+
+\verb'{'...\verb'}' 花括号 15, 22, 47, 167, 188
+
+\verb'#' 注释 15, 22, 188 
+
+\verb'>' 大于号 9
+
+\verb'>=' 9
+
+\verb'==' 9, 44 
+
+\verb'?:' 条件表达式 37, 68 
+
+\verb',' 延续到下一行 22, 188 
+
+\verb'--' 自减运算符 39, 70, 112
+
+\verb'^' 指数运算符 15, 36, 46
+
+\verb'%' 格式转换 42, 189
+
+\verb'-' 字符集合 42, 189
+
+\verb'%%' 打印一个百分号 79
+
+\verb'&' 替换 43, 72, 189
+
+\verb'++' 自增运算符 39, 146, 158
+
+\verb'|' 管道 62, 76
+
+\verb'~' 匹配运算符 25, 27, 31, 37, 40 
+
+\verb'!' 逻辑非运算符 10, 31, 37
+
+\verb'||' 逻辑或运算符 10, 31, 37 
+
+\verb'>' 输出重定向 56, 58, 188
+
+\verb'>>' 输出重定向 56, 58, 188
+
+\verb'|' 输出重定向 58, 188 
+
+\verb"' '" 引号
+
+\verb'.' 正则表达式中的句点 28
+
+\verb'$' 正则表达式中的美元符 28
+
+\verb'^' 正则表达式中的脱字符 28
+
+\verb'()' 正则表达式中的括号 29
+
+\verb'['...\verb']' 29 
+
+\verb'[^'...\verb']' 29
+
+\verb'|' 正则表达式 29, 32
+
+\verb'*' 正则表达式 30
+
+\verb'+' 正则表达式 30
+
+\verb'?' 正则表达式 30 
+
+\verb'%' 取余 36, 46
+
+\verb'-' 标准输入文件名 64, 116
+
+\verb'"'...\verb'"' 字符串常量 7, 24, 35, 51
+
+\verb'_' 下划线 35
 \end{multicols}
