--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -365,3 +365,49 @@ and counts for each size.}  输出数据被输送给绘图程序 \texttt{grap}, 
 最后再递增 \texttt{i}. 按照这种方式, 一旦所有的元素都处理完毕, 我们需要
 交换 \texttt{A[left]} 与 \texttt{A[last]}. 到这里, 我们已经完成的一次
 划分, 此时的数组看起来就像这样:\footnote{TODO}
+\marginpar{161}
+现在, 我们对左边的子数组与右边的子组执行同样的操作.
+
+假设我们对下列8个元素进行快速排序:
+\begin{file}
+    8 1 6 3 5 2 4 7
+\end{file}
+第一步我们可能选择 4 作为划分元素, 接下来, 划分操作会把数组重新排列成
+\begin{file}
+    2 1 3|4|5 6 8 7
+\end{file}
+接下再递归地对子数组 \texttt{2 1 3} 与 \texttt{5 6 8 7} 进行快速排序. 
+我们可以用插入排序的测试例程对该算法进行测试.
+\begin{awkcode}
+    # quicksort
+
+        { A[NR] = $0 }
+
+    END { qsort(A, 1, NR)
+          for (i = 1; i <= NR; i++)
+              print A[i]
+        }
+
+    # qsort - sort A[left..right] by quicksort
+
+    function qsort(A,left,right,   i,last) {
+         if (left >= right)  # do nothing if array contains
+             return          # less than two elements
+         swap(A, left, left + int((right-left+1)*rand()))
+         last = left   # A[left] is now partition element
+         for (i = left+1; i <= right; i++)
+             if (A[i] < A[left])
+                 swap(A, ++last, i)
+         swap(A, left, last)
+         qsort(A, left, last-1)
+         qsort(A, last+1, right)
+    }
+
+    function swap(A,i,j,   t) {
+         t = A[i]; A[i] = A[j]; A[j] = t
+    }
+\end{awkcode}
+
+\cterm{性能}. \texttt{qsort} 所执行的操作次数取决于数组划分时的均匀程度.
+如果数组划分每次都很平均, 那么程序的运行时间与 $n \log n$ 成正比.
+\marginpar{162}
