for pdf updating

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -348,7 +348,7 @@ and counts for each size.}  输出数据被输送给绘图程序 \texttt{grap}, 
 \cterm{基本概念}. 快速排序是最高效的通用排序算法之一, 由 C. A. R. Hoare
 在六十年代早期提出. 为了对一个元素序列进行排序, 快速排序算法把序列划分成
 两个子序列, 然后再递归地对子序列进行排序. 在划分阶段, 算法从序列中选取
-一个元素作为划分点, 把剩下的元素分成两组: 小于划分元素的分在一个组中, 
+一个数作为划分点, 把剩下的元素分成两组: 小于划分元素的分在一个组中, 
 而大于或等于划分元素的分在另一个组中, 然后再对这两组递归调用快速排序.
 如果一个序列所含的元素个数小于2, 则可认为它已经是有序的了, 于是算法
 什么也不做就返回.
