translate part of page 162/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -411,3 +411,8 @@ and counts for each size.}  输出数据被输送给绘图程序 \texttt{grap}, 
 \cterm{性能}. \texttt{qsort} 所执行的操作次数取决于数组划分时的均匀程度.
 如果数组划分每次都很平均, 那么程序的运行时间与 $n \log n$ 成正比.
 \marginpar{162}
+于是, 如果数据规模变为原来的两倍, 那么程序的运行时间只会在原来两倍的基础上
+再稍微多出一点.
+
+在最坏的情况下, 划分操作的结果会出现其中一个子数组长度为 0 的情况. 当所有
+元素都相等时就会出现
