complete a TODO in page 158/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -255,7 +255,12 @@ above.}
 和交换的次数, 对于一个排序过程来说, 这是两个很客观的指标. 正如你
 所看到的那样, 逆序序列拥有最差的性能, 随机序列居中, 而同一元素
 序列表现出了最佳的性能. 有序序列的性能表现和同一元素序列非常接近
-(在图中没有显示出来). \footnote{TODO}
+(在图中没有显示出来).\footnote{最好用矢量图, 而不是从原版中截图 --- 
+译者注}
+
+\begin{center}
+    \includegraphics[scale=0.7]{./images/insertion_sort.png}
+\end{center}
 
 总得来说, 插入排序适用于元素个数较少的情况, 当元素个数过多时, 该算法
 的性能就会快速下降, 除非输入数据基本有序.
