--- a/preamble.tex
+++ b/preamble.tex
@@ -6,6 +6,7 @@
 \usepackage{geometry}
 \usepackage{fontspec}
 \usepackage{xeCJK}
+\usepackage{amssymb}
 % for tikz
 \usepackage{tikz}
 \usepackage{hyperref}
