translate to page 163/210

--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,8 @@
 \usepackage{caption}
 % for exercise 
 \usepackage{theorem}
+% for graphics
+\usepackage{graphicx}
 
 % from package geometry
 % 为边注加边框
