review stop at page 162/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -456,6 +456,9 @@ and counts for each size.}  输出数据被输送给绘图程序 \texttt{grap}, 
     的相同 ? 用大一点的例子作测试, 看看其统计图还是不是一样的.
 \end{exercise}
 
+\subsection{堆排序}
+\label{subsec:heapsort}
+
 \cterm{基本概念}. \cterm{优先级队列} (\term{priority queue}) 是一种数据
 结构, 用于存储和检索元素. 它有两种基本操作: 往队列中插入一个新元素, 以及 
 从队列中提取最大的元素. 这表明优先级队列可以用来排序: 首先把所有的元素
