review part of page 205/210

--- a/index.tex
+++ b/index.tex
@@ -5,6 +5,7 @@
 索引中的页码指的是英文原版的页码, 与本书页边标注的页码一致.
 
 \begin{multicols}{2}
+
 \verb'&&' 逻辑与运算符 10, 31, 37, 158
 
 \verb'%=' 38
@@ -43,7 +44,7 @@
 
 \verb'%' 格式转换 42, 189
 
-\verb'-' 字符集合 42, 189
+\verb'-' 字符集合 29
 
 \verb'%%' 打印一个百分号 79
 
@@ -51,9 +52,11 @@
 
 \verb'++' 自增运算符 39, 146, 158
 
-\verb'|' 管道 62, 76
+\verb'|' 输入管道 62, 76
 
 \verb'~' 匹配运算符 25, 27, 31, 37, 40 
+
+\verb'!~' 不匹配运算符 25, 27, 31, 37, 40
 
 \verb'!' 逻辑非运算符 10, 31, 37
 
