--- a/index.tex
+++ b/index.tex
@@ -6,95 +6,95 @@
 
 \begin{multicols}{2}
 
-\verb'&&' 逻辑与运算符 10, 31, 37, 158
+\verb'&&' AND operator 10, 31, 37, 158
 
-\verb'%=' 38
+\verb'%=' assignment operator 38
 
-\verb'*=' 38 
+\verb'*=' assignment operator 38 
 
-\verb'+=' 38
+\verb'+=' assignment operator 38
 
-\verb'-=' 38
+\verb'-=' assignment operator 38
 
-\verb'/=' 38
+\verb'/=' assignment operator 38
 
-\verb'^=' 38 
+\verb'^=' assignment operator 38 
 
-\verb'=' 38, 44
+\verb'=' assignment operator 38, 44
 
-\verb'\' 28, 30, 41, 43
+\verb'\' backslash 28, 30, 41, 43
 
-\verb'{'...\verb'}' 花括号 15, 22, 47, 167, 188
+\verb'{'...\verb'}' braces 15, 22, 47, 167, 188
 
-\verb'#' 注释 15, 22, 188 
+\verb'#' comment 15, 22, 188 
 
-\verb'>' 大于号 9
+\verb'>' comparison operator 9
 
-\verb'>=' 9
+\verb'>=' comparison operator 9
 
-\verb'==' 9, 44 
+\verb'==' comparison operator 9, 44 
 
-\verb'?:' 条件表达式 37, 68 
+\verb'?:' conditional expression 37, 68 
 
-\verb',' 延续到下一行 22, 188 
+\verb',' continuation after 22, 188 
 
-\verb'--' 自减运算符 39, 70, 112
+\verb'--' decrement operator 39, 70, 112
 
-\verb'^' 指数运算符 15, 36, 46
+\verb'^' exponentiation operator 15, 36, 46
 
-\verb'%' 格式转换 42, 189
+\verb'%' format conversion 42, 189
 
-\verb'-' 字符集合 29
+\verb'-' in character class 29
 
-\verb'%%' 打印一个百分号 79
+\verb'%%' in \verb'printf' 79
 
-\verb'&' 替换 43, 72, 189
+\verb'&' in substitution 43, 72, 189
 
-\verb'++' 自增运算符 39, 146, 158
+\verb'++' increment operator 39, 146, 158
 
-\verb'|' 输入管道 62, 76
+\verb'|' input pipe 62, 76
 
-\verb'~' 匹配运算符 25, 27, 31, 37, 40 
+\verb'~' match operator 25, 27, 31, 37, 40 
 
-\verb'!~' 不匹配运算符 25, 27, 31, 37, 40
+\verb'!~' nonmatch operator 25, 27, 31, 37, 40
 
-\verb'!' 逻辑非运算符 10, 31, 37
+\verb'!' NOT operator 10, 31, 37
 
-\verb'||' 逻辑或运算符 10, 31, 37 
+\verb'||' OR operator 10, 31, 37 
 
-\verb'>' 输出重定向 56, 58, 188
+\verb'>' output redirection 56, 58, 188
 
-\verb'>>' 输出重定向 56, 58, 188
+\verb'>>' output redirection 56, 58, 188
 
-\verb'|' 输出重定向 58, 188 
+\verb'|' output redirection 58, 188 
 
-\verb"' '" 引号
+\verb"' '" quotes 2, 4-5, 65, 100
 
-\verb'.' 正则表达式中的句点 28
+\verb'.' regular expression 28
 
-\verb'$' 正则表达式中的美元符 28
+\verb'$' regular expression 28
 
-\verb'^' 正则表达式中的脱字符 28
+\verb'^' regular expression 28
 
-\verb'()' 正则表达式中的括号 29
+\verb'()' regular expression 29
 
-\verb'['...\verb']' 29 
+\verb'['...\verb']' regular expression 29 
 
-\verb'[^'...\verb']' 29
+\verb'[^'...\verb']' regular expression 29
 
-\verb'|' 正则表达式 29, 32
+\verb'|' regular expression 29, 32
 
-\verb'*' 正则表达式 30
+\verb'*' regular expression 30
 
-\verb'+' 正则表达式 30
+\verb'+' regular expression 30
 
-\verb'?' 正则表达式 30 
+\verb'?' regular expression 30 
 
-\verb'%' 取余 36, 46
+\verb'%' remainder operator 36, 46
 
-\verb'-' 标准输入文件名 64, 116
+\verb'-' standard input filename 64, 116
 
-\verb'"'...\verb'"' 字符串常量 7, 24, 35, 51
+\verb'"'...\verb'"' string constant 7, 24, 35, 51
 
-\verb'_' 下划线 35
+\verb'_' underscore 35
 \end{multicols}
