part of index in page 205/210

--- a/index.tex
+++ b/index.tex
@@ -97,4 +97,94 @@
 \verb'"'...\verb'"' string constant 7, 24, 35, 51
 
 \verb'_' underscore 35
+
+\verb'$0' at end of input 13
+
+\verb'$0' blank line 192 
+
+\verb'$0' record variable 5, 35 
+
+\verb'$0', side-effects on 36 43 
+
+\verb'\007' bell character 31 
+
+\verb'\b' backspace character 31 
+
+\verb'/dev/tty' file 59 
+
+\verb'-f' option 4-5, 63, 65, 187 
+
+\verb'-F' option 60, 63, 187 
+
+\verb'>'\textit{file}, \verb'print' 90, 188 
+
+\verb'#include' processor 62, 64 
+
+\verb'$'\textit{n} field 5, 35 
+
+\verb'\n' newline character 8, 31, 79
+
+\pi, computation of 39 
+
+\verb'\t' tab character 15, 24, 31 
+
+\verb'$x++' versus \verb'$(x++)' 146 
+
+action, default 5, 9, 21, 187 
+
+actions, summary of 34, 188 
+
+add checks and deposits 87 
+
+\verb'addcomma' program 72, 194
+
+address list 82 
+
+address list, sorting 84
+
+aggregation 51, 58, 119
+
+Aho, A. V. 130, 152, 179, 186
+
+Aho, S. vi 
+
+Akkerhuis, J. vi 
+
+algorithm, depth-first search 172, 177
+
+algorithm, heapsort 162
+
+algorithm, insertion sort 153
+
+algorithm, linear 157, 183
+
+algorithm, \verb'make' update 176
+
+algorithm, $n\log n$ 162, 165
+
+algorithm, quadratic 157, 162, 183
+
+algorithm, quicksort 160
+
+algorithm, topological sort 171
+
+AND operator, \verb'&&' 10, 31, 37, 158
+
+\verb'ARGC' variable 36, 63, 189
+
+arguments, command-line 63
+
+arguments, function 54
+
+\verb'ARGV', changing 64-65, 116
+
+\verb'ARGV' variable 36, 63-65, 116, 189
+
+\verb'arith' program 117
+
+arithmetic expression grammar 145
+
+arithmetic functions, summary of 190
+
+arithmetic functions, table of 39
 \end{multicols}
