review part of page 205/210

--- a/index.tex
+++ b/index.tex
@@ -124,7 +124,7 @@
 
 \verb'\n' newline character 8, 31, 79
 
-\pi, computation of 39 
+$\pi$, computation of 39 
 
 \verb'\t' tab character 15, 24, 31 
 
