complete index in page 205/210

--- a/index.tex
+++ b/index.tex
@@ -187,4 +187,96 @@ arithmetic expression grammar 145
 arithmetic functions, summary of 190
 
 arithmetic functions, table of 39
+
+arithmetic operator 36, 44
+
+arithmetic operator, table of 46
+
+array, associative 50-51, 193
+
+array parameter 54
+
+array reference, cost of 184, 204
+
+array subscripts 50-52
+
+arrays 16, 50
+
+arrays, multidimensional 52, 108, 114, 116, 182
+
+\verb'asm' program 134, 203
+
+\verb'asplit' function 81
+
+assembler instructions, table of 132
+
+assembly language 133
+
+assignment, command-line 63, 94, 187, 195, 197
+
+assignment expression 39, 127
+
+assignment, multiple 39
+
+assignment operator, \verb'%=' 38
+
+assignment operator, \verb'*=' 38
+
+assignment operator, \verb'+=' 38
+
+assignment operator, \verb'-=' 38
+
+assignment operator, \verb'/=' 38
+
+assignment operator, \verb'^=' 38
+
+assignment operator, \verb'=' 38, 44
+
+assignment operators 38 
+
+assignment, side-effects of 43
+
+associative array 50-51, 193
+
+associative of operators 46
+
+\verb'atan2' function 39
+
+attribute, database 103
+
+avoiding \verb'sort' options 91, 140
+
+awk command line 1, 3, 63, 65, 187
+
+awk grammar 148
+
+awk program, form of 2, 21, 187
+
+awk program, running an 3
+
+awk program, running time of 183
+
+\verb'awk.parser' program 149
+
+back edge 173-174
+
+backslash, \verb'\' 28, 30, 41, 43
+
+backspace character, \verb'\b' 31
+
+bailing out 4
+
+balanced delimiters 77, 195
+
+base table 106
+
+batch sort test program 155
+
+\verb'BEGIN' and \verb'END', multiple 23, 169
+
+\verb'BEGIN' pattern 11, 23, 63
+
+bell character, \verb'\007' 31
+
+Bentley, J. L. vi, 130, 152, 179
 \end{multicols}
