part of index in page 206/210

--- a/index.tex
+++ b/index.tex
@@ -279,4 +279,138 @@ batch sort test program 155
 bell character, \verb'\007' 31
 
 Bentley, J. L. vi, 130, 152, 179
+
+binary tree 163
+
+blank line, \verb'$0' 192 
+
+blank line, printing a 11, 55
+
+blank line separator 83
+
+boundary condition testing 155
+
+braces, \verb'{'...\verb'}' 15, 22, 47, 167, 188
+
+breadth-first order 163, 171
+
+\verb'break' statement 49
+
+\verb'bridge' program 199
+
+built-in variables, table of 36
+
+\verb'bundle' program 81
+
+\verb'calc1' program 143
+
+\verb'calc2' program 144
+
+\verb'calc3' program 146
+
+call by reference 54
+
+call by value 54
+
+\verb'capitals' file 102
+
+\verb'cat' command 59, 64
+
+\verb'cc' command 175
+
+changing \verb'ARGV' 64-65, 116
+
+character class, \verb'-' in 29
+
+character class, complemented 29
+
+character class, regular expression 29
+
+character, table of escape 31
+
+\verb'check' function 155
+
+check password file 78
+
+\verb'check1' program 87
+
+\verb'check2' program 87
+
+\verb'check3' program 88
+
+\verb'checkgen' program 79
+
+checking, corss-reference 73
+
+checks and deposits, add 87
+
+checks, printing 74
+
+Cherry, L. L. vi 
+
+\verb'chmod' command 65
+
+\verb'choose' function 112
+
+\verb'cliche' program 113
+
+\verb'close' statement 59, 82
+
+coercion 44, 154, 182
+
+coercion, number to string 25
+
+coercion rules 44, 192
+
+coercion, string to number 25
+
+coercion to number 45
+
+coercion to string 45
+
+\verb'colcheck' program 77
+
+columns, summing 67
+
+command, \verb'cat' 59, 64
+
+command, \verb'cc' 175
+
+command, \verb'chmod' 65
+
+command, \verb'date' 62, 76
+
+command, \verb'egrep' 59, 181, 184, 186
+
+command, \verb'grep' v, 181, 184
+
+command interpreter, shell 4, 65, 99
+
+command, \verb'join' 104
+
+command line, awk 1, 3, 63, 65, 187
+
+command, \verb'lorder' 170
+
+command, \verb'ls' 177
+
+command, \verb'make' 175
+
+command, \verb'nm' 73
+
+command, \verb'pr' 175
+
+command, \verb'ptx' 123
+
+command, \verb'sed' v, 181, 184, 186
+
+command, \verb'sort' 8, 58, 84, 90
+
+command, \verb'tbl' 95
+
+command, \verb'tr' 201
+
+command, \verb'troff' 120, 124-125, 127, 139
+
+command, \verb'wc' 183
 \end{multicols}
