添加 205/210 与 206/210 的边注

--- a/index.tex
+++ b/index.tex
@@ -2,6 +2,7 @@
 \chapter{索引}
 \label{chap:index}
 
+\marginpar{205}
 索引中的页码指的是英文原版的页码, 与本书页边标注的页码一致.
 
 \begin{multicols}{2}
@@ -279,6 +280,7 @@ batch sort test program 155
 bell character, \verb'\007' 31
 
 Bentley, J. L. vi, 130, 152, 179
+\marginpar{206}
 
 binary tree 163
 
