complete two thirds of page 206/210

--- a/index.tex
+++ b/index.tex
@@ -415,4 +415,120 @@ command, \verb'tr' 201
 command, \verb'troff' 120, 124-125, 127, 139
 
 command, \verb'wc' 183
+
+command, \verb'who' 62
+
+command-line arguments 63
+
+command-line assignment 63, 94, 187, 195, 197
+
+commas, inserting 71
+
+comment, \verb'#' 15, 22, 188
+
+comparison expression, value of 37
+
+comparison, numeric 25-26, 44
+
+comparison operator, \verb'>' 9
+
+comparison operator, \verb'>'= 9
+
+comparison operator, \verb'==' 9, 44
+
+comparison operators 36
+
+comparison operators, table of 25
+
+comparison, string 25-26, 44, 184
+
+\verb'compat' program 80
+
+compiler model 131
+
+complemented character class 29
+
+compound patterns 31
+
+computation of base-10 logarithm 39
+
+computation of \textit{e} 39
+
+computation of $\pi$ 39
+
+concatenation in regular expression 29
+
+concatenation operator 40, 43, 182
+
+concatenation, string 13, 40, 43, 47, 56, 101, 182, 184
+
+conditional expression, \verb'?:' 37, 68
+
+constant, \verb'"'...\verb'"' string 7, 24, 35, 51
+
+constant, numeric 35
+
+constraint graph 170
+
+context-free grammar 113, 145, 148
+
+continuation after , 22, 188
+
+\verb'continue' statement 49
+
+continuinglong statements 15, 22, 188
+
+control-break program 92, 95, 105, 110, 126
+
+control-flow statements, summary of 48
+
+conversion, \verb'%' format 42, 189
+
+conversion, date 72, 194
+
+conversion, number to string 35, 44, 192
+
+conversion, string to number 35, 44, 192
+
+convert numbers to words 76
+
+\verb'cos' function 39
+
+cost of array reference 184, 204
+
+\verb'countries' file 22
+
+Cowlishaw, M. F. 186
+
+cross-reference checking 73
+
+cross-reference in manuscripts 120
+
+cycle, graph 171, 173-174, 177
+
+Dallen, J. A. 152
+
+data, name-value 86
+
+data, regular expressions in 118
+
+data, self-identifying 86
+
+data structure, successor-list 171
+
+data types 5
+
+data validation 10, 76
+
+database attribute 103
+
+database description, \verb'relfile' 106
+
+database, multifile 102
+
+database query 99
+
+database table 103
+
+databases, relational iv, 102
 \end{multicols}
