complete a TODO in page 163/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -516,7 +516,10 @@ J. W. J. Williams 和 R. W. Floyd 在 60 年代早期提出.
         位于最底层 (距离根结点最远的层次) 的叶子尽量靠左排列;
     \item 树是部分有序的: 每个结点的值大于或等于它的孩子结点.
 \end{enumerate}
-这是带有 10 个元素的堆:\footnote{TODO}
+这是带有 10 个元素的堆:
+\begin{center}
+    \includegraphics[scale=0.8]{images/heap_with_10_elem.png}
+\end{center}
 
 堆具有两条非常重要的性质. 第一条性质是, 如果有 \textit{n} 个结点, 那么所
 有的从根结点到叶子结点的路径长度都不会大于 $\log_2 n$. 第二条性质是,
