complete index in page 206/210

--- a/index.tex
+++ b/index.tex
@@ -531,4 +531,120 @@ database query 99
 database table 103
 
 databases, relational iv, 102
+
+\verb'date' command, 62, 76
+
+date conversion 72, 194
+
+dates, sorting 72
+
+\verb'daynum' function 194
+
+decrement operator, \verb'--' 39, 70, 112
+
+default action 5, 9, 21, 187
+
+default field separator 5, 24
+
+default initialization 12-13, 35, 38, 45, 50-51, 54, 68, 181
+
+\verb'delete' statement 52
+
+delimiters, balanced 77, 195
+
+dependency description, \verb'makefile' 175
+
+dependency graph 176
+
+depth-first search algorithm 172, 177
+
+derived table 106
+
+\verb'dfs' function 173
+
+divide and conquer v, 89, 110, 121, 123-124, 130, 160, 184, 202
+
+\verb'do' statement 49
+
+dynamic regular expression 40, 101, 184
+
+\textit{e}, computation of 39
+
+\verb'echo' program 63
+
+\verb'egrep' command 59, 181, 184, 186
+
+\verb'else', semicolon before 47
+
+\verb'emp.data' file 1
+
+empty statement 50, 188
+
+\verb'END', multiple \verb'BEGIN' and 23, 169
+
+end of input, \verb'$0' at 13
+
+\verb'END' pattern 11, 23, 49
+
+error file, standard 59
+
+\verb'error' function 118, 149, 178
+
+error messages, printing 59
+
+error, syntax 4
+
+escape sequence 31, 35, 191
+
+escape sequences, table of 31
+
+examples, regular expression 30
+
+examples, table of \verb'printf' 57
+
+executable file 65
+
+\verb'exit' statement 49
+
+exit status 50, 64
+
+\verb'exp' function 39
+
+exponential notation 35
+
+exponentiation operator, \verb'^' 15, 36, 46
+
+expression, \verb'?:' conditional 37, 68
+
+expression, assignment 39, 127
+
+expression grammar 145
+
+expression, value of comparison 37
+
+expression, value of logical 37
+
+expression, field 36
+
+expression, primary 34
+
+expression, summary of 37
+
+Feldman, S. I. 179
+
+field expressions 36
+
+field, \verb'$'\textit{n} 5, 35
+
+field, nonexistent 36, 45, 192
+
+\verb'field' program 66
+
+field separator, default 5, 24
+
+field separator, input 24, 35, 39, 60
+
+field separator, newline as 61, 83-84
+
+field separator, output 6, 35, 39, 55-56
 \end{multicols}
